--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-tad_gphotos 1.0 (2019-09-25 釋出)
+tad_gphotos 1.0 (2019-09-26 釋出)
  =================================================
  1.正式釋出
+ 2.快速匯入 Google Photos 相簿，不佔網站空間
+ 3.提供相簿列表、無縫跑馬燈、相簿縮圖...等區塊
