修正權限設定無法正確運作的問題

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+tad_gphotos 1.1 (2019-10-05 釋出)
+ =================================================
+ 1.修正權限設定無法正確運作的問題
+
 tad_gphotos 1.0 (2019-09-26 釋出)
  =================================================
  1.正式釋出
