針對無障礙 2.0 AA標準進行修正

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+tad_gphotos 1.2 (尚未釋出)
+ =================================================
+ 1.針對無障礙 2.0 AA標準進行修正
+
 tad_gphotos 1.1 (2019-10-05 釋出)
  =================================================
  1.修正權限設定無法正確運作的問題
