--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-tad_gphotos 1.2 (尚未釋出)
+tad_gphotos 1.2 (2020-03-14 釋出)
  =================================================
  1.針對無障礙 2.0 AA標準進行修正
 
