--- a/language/english/changelog.txt
+++ b/language/english/changelog.txt
@@ -1,9 +1,13 @@
-Tad_gphotos 1.1 (released from 2019-10-05)
+tad_gphotos 1.2 (2020-03-14 released)
+ =================================================
+1. Correction for accessibility 2.0 AA standard
+
+Tad_gphotos 1.1 (2019-10-05 released)
   ==========================================================
   1. Fixed the problem that the permission setting could not work correctly.
 
 
-Tad_gphotos 1.0 (released from 2019-09-26)
+Tad_gphotos 1.0 (2019-09-26 released)
   ==========================================================
   1. Official release
   2. Quickly import Google Photos albums without taking up space on the site
