新增「重新擷取」功能

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+tad_gphotos 1.3 (2020-06-18 釋出)
+ =================================================
+ 1.修正擷取Google相簿語法
+ 2.新增「重新擷取」功能
+ 3.支援 XOOPS 2.5.11
+
 tad_gphotos 1.2 (2020-03-14 釋出)
  =================================================
  1.針對無障礙 2.0 AA標準進行修正
