修正擷取Google相簿語法

--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+tad_gphotos 1.4 (2020-08-28 釋出)
+ =================================================
+ 1.修正權限設定無法正確運作的問題
+ 2.修正擷取Google相簿語法
+ 3.加入分類功能
+
 tad_gphotos 1.3 (2020-06-18 釋出)
  =================================================
  1.修正擷取Google相簿語法
