--- a/language/english/changelog.txt
+++ b/language/english/changelog.txt
@@ -1,3 +1,9 @@
+tad_gphotos 1.4 (Released 2020-08-28)
+ =============================================================
+ 1.Fix the problem that the permission setting does not work correctly.
+ 2.Fix Google Photo Album syntax capture
+ 3.Add Category Function
+
 tad_gphotos 1.3 (Released 2020-06-18)
   ==========================================================
  1.Fix Google Photo Album syntax capture
