1.加入網址檢查，避免輸入短網址，導致無法連至原圖 2.在分類設定中，加入相簿排序設定

--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+tad_gphotos 1.5 (2020-11-18 釋出)
+ =================================================
+ 1.加入網址檢查，避免輸入短網址，導致無法連至原圖
+ 2.在分類設定中，加入相簿排序設定
+
 tad_gphotos 1.4 (2020-08-28 釋出)
  =================================================
  1.修正權限設定無法正確運作的問題
