避免第一次載入時區塊出現無法取得物件的問題

--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+tad_gphotos 1.6 (尚未釋出)
+ =================================================
+ 1.避免第一次載入時區塊出現無法取得物件的問題
+
 tad_gphotos 1.5 (2020-11-18 釋出)
  =================================================
  1.加入網址檢查，避免輸入短網址，導致無法連至原圖
