調整 tad_gphotos_data_center 欄位

--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 tad_gphotos 1.6 (尚未釋出)
  =================================================
  1.避免第一次載入時區塊出現無法取得物件的問題
+ 2.調整 tad_gphotos_data_center 欄位
 
 tad_gphotos 1.5 (2020-11-18 釋出)
  =================================================
