--- a/language/english/changelog.txt
+++ b/language/english/changelog.txt
@@ -1,3 +1,9 @@
+tad_gphotos 1.6 (released on 2021-07-30)
+ =================================================
+ 1. Avoid the problem that the block cannot get the object when it is loaded for the first time
+ 2. Adjust tad_gphotos_data_center field
+ 3. Comply with 2021/07 AA accessibility standard
+
 tad_gphotos 1.5 (Released 11/18/2020)
  =================================================
  1.Add a URL check to avoid inputting a short URL, which may lead to failure to connect to the original picture.
