--- a/language/tchinese_utf8/changelog.txt
+++ b/language/tchinese_utf8/changelog.txt
@@ -1,3 +1,9 @@
+tad_gphotos 1.6 (2021-07-30 釋出)
+ =================================================
+ 1.避免第一次載入時區塊出現無法取得物件的問題
+ 2.調整 tad_gphotos_data_center 欄位
+ 3.符合 2021/07 無障礙 AA 標準
+
 tad_gphotos 1.5 (2020-11-18 釋出)
  =================================================
  1.加入網址檢查，避免輸入短網址，導致無法連至原圖
