調整相簿區塊使其置中

--- a/language/english/changelog.txt
+++ b/language/english/changelog.txt
@@ -1,3 +1,9 @@
+tad_gphotos 1.7 (released on 2021-08-22)
+====================================
+1. Fixed for 2021/07 new version of AA accessibility standard
+2. Adjust the album block to make it centered
+
+
 tad_gphotos 1.6 (released on 2021-07-30)
  =================================================
  1. Avoid the problem that the block cannot get the object when it is loaded for the first time
