--- a/language/tchinese_utf8/changelog.txt
+++ b/language/tchinese_utf8/changelog.txt
@@ -1,3 +1,9 @@
+tad_gphotos 1.7 (2021-08-22 釋出)
+====================================
+1.針對 2021/07 新版無障礙 AA 標準進行修正
+2.調整相簿區塊使其置中
+
+
 tad_gphotos 1.6 (2021-07-30 釋出)
  =================================================
  1.避免第一次載入時區塊出現無法取得物件的問題
