--- a/README
+++ b/README
@@ -1,41 +1,45 @@
+tad_gphotos 1.8 (2022-01-28 釋出)
+====================================
+1.支援 BootStrap5
+
 tad_gphotos 1.7 (2021-08-22 釋出)
 ====================================
 1.針對 2021/07 新版無障礙 AA 標準進行修正
 2.調整相簿區塊使其置中
 
 tad_gphotos 1.6 (2021-07-30 釋出)
- =================================================
- 1.避免第一次載入時區塊出現無法取得物件的問題
- 2.調整 tad_gphotos_data_center 欄位
- 3.符合 2021/07 無障礙 AA 標準
+=================================================
+1.避免第一次載入時區塊出現無法取得物件的問題
+2.調整 tad_gphotos_data_center 欄位
+3.符合 2021/07 無障礙 AA 標準
 
 tad_gphotos 1.5 (2020-11-18 釋出)
- =================================================
- 1.加入網址檢查，避免輸入短網址，導致無法連至原圖
- 2.在分類設定中，加入相簿排序設定
+=================================================
+1.加入網址檢查，避免輸入短網址，導致無法連至原圖
+2.在分類設定中，加入相簿排序設定
 
 tad_gphotos 1.4 (2020-08-28 釋出)
- =================================================
- 1.修正權限設定無法正確運作的問題
- 2.修正擷取Google相簿語法
- 3.加入分類功能
+=================================================
+1.修正權限設定無法正確運作的問題
+2.修正擷取Google相簿語法
+3.加入分類功能
 
 tad_gphotos 1.3 (2020-06-18 釋出)
- =================================================
- 1.修正擷取Google相簿語法
- 2.新增「重新擷取」功能
- 3.支援 XOOPS 2.5.11
+=================================================
+1.修正擷取Google相簿語法
+2.新增「重新擷取」功能
+3.支援 XOOPS 2.5.11
 
 tad_gphotos 1.2 (2020-03-14 釋出)
- =================================================
- 1.針對無障礙 2.0 AA標準進行修正
+=================================================
+1.針對無障礙 2.0 AA標準進行修正
 
 tad_gphotos 1.1 (2019-10-05 釋出)
- =================================================
- 1.修正權限設定無法正確運作的問題
+=================================================
+1.修正權限設定無法正確運作的問題
 
 tad_gphotos 1.0 (2019-09-26 釋出)
- =================================================
- 1.正式釋出
- 2.快速匯入 Google Photos 相簿，不佔網站空間
- 3.提供相簿列表、無縫跑馬燈、相簿縮圖...等區塊
+=================================================
+1.正式釋出
+2.快速匯入 Google Photos 相簿，不佔網站空間
+3.提供相簿列表、無縫跑馬燈、相簿縮圖...等區塊
