修正字型太大導致相簿破版問題

--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+tad_gphotos 2.0 (2023-01-29 釋出)
+====================================
+1.修正字型太大導致相簿破版問題
+
+tad_gphotos 1.9 (2022-08-17 釋出)
+====================================
+1.移除 interface_menu.php，避免導覽列過長
+
 tad_gphotos 1.8 (2022-01-28 釋出)
 ====================================
 1.支援 BootStrap5
