--- a/README
+++ b/README
@@ -1,3 +1,17 @@
+tad_gphotos 3.0 (尚未釋出)
+====================================
+1.支援XOOPS 2.5.11
+2.支援PHP8.3
+3.用$xoopsDB->escape()取代$myts->addSlashes()
+
+tad_gphotos 2.2 (2024-08-12 釋出)
+====================================
+1.修正無法擷取Google相簿的問題
+
+tad_gphotos 2.1 (2023-03-29 釋出)
+====================================
+1.修正無法擷取Google相簿的問題
+
 tad_gphotos 2.0 (2023-01-29 釋出)
 ====================================
 1.修正字型太大導致相簿破版問題
