--- a/language/tchinese_utf8/changelog.txt
+++ b/language/tchinese_utf8/changelog.txt
@@ -1,3 +1,12 @@
+tad_gphotos 2.2 (2024-08-12 釋出)
+====================================
+1.修正無法擷取Google相簿的問題
+
+
+tad_gphotos 2.1 (2023-03-29 釋出)
+====================================
+1.修正無法擷取Google相簿的問題
+
 tad_gphotos 2.0 (2023-01-29 釋出)
 ====================================
 1.修正字型太大導致相簿破版問題
