--- a/README
+++ b/README
@@ -3,6 +3,8 @@ tad_gphotos 3.0 (尚未釋出)
 1.支援XOOPS 2.5.11
 2.支援PHP8.3
 3.用$xoopsDB->escape()取代$myts->addSlashes()
+4.資料庫語法參數化
+
 
 tad_gphotos 2.2 (2024-08-12 釋出)
 ====================================
