--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 tad_gphotos 3.0 (尚未釋出)
 ====================================
 1.支援XOOPS 2.5.11
-2.支援PHP8.3
+2.支援PHP8.1.x
 3.用$xoopsDB->escape()取代$myts->addSlashes()
 4.資料庫語法參數化
 
