--- a/language/tchinese_utf8/changelog.txt
+++ b/language/tchinese_utf8/changelog.txt
@@ -1,7 +1,13 @@
+tad_gphotos 3.0 (2024-11-11 釋出)
+====================================
+1.支援XOOPS 2.5.11
+2.支援PHP8.1.x
+3.用$xoopsDB->escape()取代$myts->addSlashes()
+4.資料庫語法參數化
+
 tad_gphotos 2.2 (2024-08-12 釋出)
 ====================================
 1.修正無法擷取Google相簿的問題
-
 
 tad_gphotos 2.1 (2023-03-29 釋出)
 ====================================
