1.修正後台分類管理計數不正確導致無法刪除問題 2.調整版面，使之避免破版

--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+tad_gphotos 3.1 (2025-06-23 釋出)
+====================================
+1.修正後台分類管理計數不正確導致無法刪除問題
+2.調整版面，使之避免破版
+
 tad_gphotos 3.0 (2024-12-12 釋出)
 ====================================
 1.支援XOOPS 2.5.11
