修正建立分類時沒有檢查權限的問題

--- a/README
+++ b/README
@@ -1,7 +1,12 @@
-tad_gphotos 3.1 (2025-06-23 釋出)
+tad_gphotos 3.2 (2025-11-04 釋出)
+====================================
+1.修正建立分類時沒有檢查權限的問題
+
+tad_gphotos 3.1 (2025-09-15 釋出)
 ====================================
 1.修正後台分類管理計數不正確導致無法刪除問題
 2.調整版面，使之避免破版
+3.調整失效假圖位置
 
 tad_gphotos 3.0 (2024-12-12 釋出)
 ====================================
