--- a/language/english/changelog.txt
+++ b/language/english/changelog.txt
@@ -1,3 +1,13 @@
+tad_gphotos 3.2 (Released 2025-11-04)
+====================================
+1. Fixed an issue where permissions were not checked when creating categories
+
+tad_gphotos 3.1 (released 2025-09-15)
+====================================
+1. Fixed the problem that the backend category management count is incorrect, which leads to the problem of not being able to delete.
+2. Adjust the layout to avoid broken pages.
+3. Adjust the position of invalid fake pictures.
+
 tad_gphotos 3.0 (released on 2024-12-12)
 ====================================
 1.Support XOOPS 2.5.11
